force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Child_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Source_Field__c</fullName>
    <label>Child Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>