force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Custom_Query__c.field-meta.xml
<CustomField>
    <fullName>Custom_Query__c</fullName>
    <description>Use this filed to write your own query and prevent it from being generated by code.
You must use the following example format
SELECT AccountID, OPERATION() OPERATION1 FROM Case WHERE AccountID IN : tempLookupIds GROUP BY AccountID</description>
    <inlineHelpText>Use this filed to write your own query and prevent it from being generated by code.
You must use the following example format
SELECT AccountID, OPERATION() OPERATION1 FROM Case WHERE AccountID IN : tempLookupIds GROUP BY AccountID</inlineHelpText>
    <label>Custom Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>