force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>