force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_API_Name__c</fullName>
    <label>Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>