force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>