force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>Updates will be made to this object</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>