force-app/main/main/default/objects/Custom_Rollup_Configuration__mdt/fields/Parent_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Target_Field__c</fullName>
    <label>Parent Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>